--- a/android_fundamentals/AF04_3HomeWork/DroidCafe/app/src/main/res/values/strings.xml
+++ b/android_fundamentals/AF04_3HomeWork/DroidCafe/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="action_order">Order</string>
     <string name="action_status">Status</string>
     <string name="action_favorites">Favorites</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
